<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">互应</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="positive_button">确定</string>
    
    <!-- url -->
    <string name="hall_url">Hall</string>
    <string name="new_one_url">NewOne</string>
    <string name="my_inf_url">MyInf</string>
    <string name="my_event_url">MyEvent</string>
    
    <!-- hall -->
	<string name="navigation_title">互·应</string>
	<string name="run">跑步</string>
	<string name="ball">球类</string>
	<string name="exercise">健身</string>
	<string name="other">其他</string>
	<string name="hall_exist">退出之后需要重新登录的哦~</string>
	<string name="load_full">已加载全部</string>
	<string name="no_data">暂无数据</string>
	<string name="more">加载中</string>
	<string name="d">图片描述</string>
	<string name="lastUpdateTime">最近更新：%s</string>
	<string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="hall_listview_add_more">点击加载更多</string>
    <string name="listview_footer">上拉刷新</string>
	
	<!-- newOne -->
	<string name="new_one_title">我要发布</string>
	<string name="new_one_class">活动类别</string>
	<string name="new_one_name">活动名称</string>
	<string name="new_one_start_time">开始时间</string>
	<string name="new_one_end_time">结束时间</string>
	<string name="new_one_meet_place">会面地点</string>
	<string name="new_one_number_limit">人数上限</string>
	<string name="new_one_something">备注</string>
	<string name="new_one_need_accept">加入要我的同意</string>
	<string name="new_one_ensure">确认</string>
	<string name="new_one_success">创建成功</string>
	
	<!-- menu_left -->
	<string name="menu_left_activity">我的活动</string>
	<string name="menu_left_user_message">用户私信</string>
	<string name="menu_left_system_message">活动通知</string>
	<string name="menu_left_user_comment">用户评论</string>
	<string name="menu_left_user_focus">我的关注</string>
	<string name="menu_left_user_feedback">用户反馈</string>
	<string name="menu_left_net_flow">免费流量</string>
	<string name="menu_left_user_exit">退出登陆</string>
	<string name="menu_left_user_name_temp">登录/注册</string>
	<string name="menu_left_click_notification">请登录/注册</string>
	<string name="user_net_flow">获取流量</string>
	
	
	<!-- login -->
	<string name="login_register">注册</string>
	<string name="login_username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_signin_label">登录</string>
    <string name="login_jaccount">Jaccount登录</string>
    <string name="login_title">登录</string>
    
    <!-- jaccount_login -->
    <string name="jaccount_login_title">Jaccount登录</string>
    <string name="jaccount_login_signin_label">Jaccount登录</string>
    <string name="jaccount_login_username_hint">请输入Jaccount账号</string>
    <string name="jaccount_login_password_hint">请输入Jaccount密码</string>
    
    <!-- Register -->
    <string name="register_title">注册</string>
    <string name="register_user_password">密码</string>
    <string name="register_user_password_again">确认密码</string>
    <string name="register_ensure">确认</string>
    
    <string name="register_user_school">学校</string>
    <string name="register_user_real_name">实名</string>
    <string name="register_user_mobile">电话</string>
    <string name="register_user_email">邮箱</string>
    <string name="register_user_interest">兴趣</string>
    <string name="register_user_gender">性别</string>
    <string name="register_user_birthday">生日</string>
    <string name="register_user_account">账号</string>
    <string name="register_user_nickname">昵称</string>
    <string name="register_user_college">学院</string>
    <string name="register_user_major">专业</string>
    <string name="register_user_estimation">评分</string>
    <string name="register_user_grade">年级</string>
    <string name="register_user_qq">QQ</string>
    
    <!-- inf_show -->
    <string name="inf_show_title">temp</string>
    <string name="inf_show_user_letter">私信</string>
    <string name="inf_show_user_focus">关注</string>
    
    <!-- my_inf -->
    <string name="my_inf_title">我</string>
    <string name="my_inf_basic_inf">基本信息</string>
    <string name="my_inf_change_password">密码修改</string>
    <string name="my_inf_change_user_image">头像修改</string>
    <string name="my_inf_change">修改</string>
    <string name="my_inf_change_ensure">保存</string>
    <string name="my_inf_origenal_password">原密码</string>
    <string name="my_inf_new_password">新密码</string>
    <string name="my_inf_new_password_again">再次确认</string>
    <string name="interest_1">跑步</string> 
    <string name="interest_2">游泳</string> 
    <string name="interest_3">健身</string> 
    <string name="interest_4">骑车</string> 
    <string name="interest_5">羽毛球</string> 
    <string name="interest_6">乒乓球</string> 
    <string name="interest_7">网球</string> 
    <string name="interest_8">台球</string> 
    <string name="interest_9">足球</string> 
    <string name="interest_10">篮球</string> 
    <string name="interest_11">麻将</string> 
    <string name="interest_12">电影</string> 
    <string name="interest_13">唱歌</string> 
    <string name="interest_14">电竞</string> 
    <string name="interest_15">美食</string> 
    
    <!-- my_event -->
	<string name="my_event_title">我的活动</string>
	<string name="my_event_on">进行中</string>
	<string name="my_event_off">已完成</string>
	
	<!-- message -->
	<string name="message_title">系统消息</string>
	<string name="message_system_inf">系统消息</string>
	<string name="message_personal_letter">私信</string>
	<string name="message_comment">评论</string>
	
	<!-- simple_item -->
	<string name="simple_item_letter">私信</string>
	<string name="simple_item_meet_place">地点:</string>
	<string name="simple_item_meet_time">时间:</string>
	<string name="simple_item_number">人数:</string>
	<string name="simple_item_in">参加</string>
	<string name="simple_item_already_in">已加入</string>
	<string name="simple_item_full">已满</string>
	<string name="simple_item_start_time">开始时间:</string>
	<string name="simple_item_end_time">结束时间:</string>
	
	<!-- user_comment -->
	<string name="user_comment_title">用户评论</string>
	
	<!-- user_letter -->
	<string name="user_letter_title">用户私信</string>
	<string name="user_letter_read">已读</string>
	<string name="user_letter_unread">未读</string>
	
	<!-- activity_detail -->
	<string name="activity_detail_title">活动详情</string>
	<string name="activity_detail_leverl3_title">活动详情</string>
	<string name="activity_detail_leverl4_title">评论</string>
	
	<!-- letter_chat -->
	<string name="letter_chat_title">私信聊天</string>
	<string name="letter_chat_send">发送</string>
	
	
	<!-- feed back -->
	<string name="feedback_title">用户反馈</string>
	
	<!-- my_focus -->
	<string name="my_focus_title">我的关注</string>
	
	
	<!-- dialog_normal -->
	<string name="title_alert">提示信息</string>
	<string name="ok">确定</string>
    <string name="cancel">取消</string>
	
    
    <!-- act_member -->
	<string name="act_member">活动成员</string>
    
</resources>







